--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
 				</div>
 			</div>
 		</section>
-		<section class="col-span-12 bg-[#EDF3F4] p-3">
-			<h2 class="mb-3 text-center text-3xl text-palette-7">Dagdeal</h2>
-			<div class="flex w-full overflow-y-auto overflow-x-scroll">
-				<div class="w-screen shrink-0 space-y-4">
+		<section class="col-span-12">
+			<div class="flex w-full space-x-3 overflow-y-auto overflow-x-scroll">
+				<div class="w-screen shrink-0 space-y-4 bg-[#EDF3F4] py-5">
+					<h2 class="mb-3 text-center text-3xl text-palette-7">Dagdeal</h2>
 					<div class="flex items-center justify-center">
 						<div class="rounded-md bg-white p-4">
 							<img src="./images/helicopter.png" alt="deal" />
@@ -201,36 +201,56 @@
 						Nu Winkelen
 					</button>
 				</div>
-				<div class="w-screen shrink-0 space-y-4">
-					<div class="flex items-center justify-center">
-						<div class="rounded-md bg-white p-4">
-							<img src="./images/helicopter.png" alt="deal" />
-						</div>
-						<div
-							class="-ml-4 flex h-[80px] w-[80px] items-center justify-center rounded-full border-8 border-[#EDF3F4] bg-palette-7 p-2 text-xl font-bold text-white"
+				<div class="relative w-[60vw] shrink-0">
+					<h2 class="absolute top-4 left-3 text-3xl text-white">Colberts</h2>
+					<div class="h-full bg-[#7070D4]">
+						<img
+							src="./images/category-img-1.png"
+							alt="category img"
+							class="h-full w-full object-cover"
+						/>
+					</div>
+					<div class="absolute bottom-3 left-3">
+						<button
+							class="flex items-center justify-center bg-palette-3 px-3 py-2 font-righteous text-lg text-black"
 						>
-							-30%
-						</div>
+							Bekijk meer
+						</button>
 					</div>
-					<div class="flex items-center justify-center space-x-1">
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">2</div>
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">3</div>
-						<span class="px-1 font-righteous text-xl text-palette-7">:</span>
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">2</div>
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">7</div>
-						<span class="px-1 font-righteous text-xl text-palette-7">:</span>
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">1</div>
-						<div class="bg-white px-1 font-righteous text-xl text-palette-7">2</div>
+				</div>
+				<div class="relative w-[60vw] shrink-0">
+					<h2 class="absolute top-4 left-3 text-3xl text-white">Laptops</h2>
+					<div class="h-full bg-[#EF8680]">
+						<img
+							src="./images/category-img-1.png"
+							alt="category img"
+							class="h-full w-full object-cover"
+						/>
 					</div>
-					<p class="text-center font-bold text-palette-7">
-						Nu voor <span class="text-2xl">€45.00</span>
-						<span class="text-palette-1 line-through">€55.00</span>
-					</p>
-					<button
-						class="mx-auto flex items-center justify-center bg-palette-3 px-3 py-2 font-righteous text-lg text-white"
-					>
-						Nu Winkelen
-					</button>
+					<div class="absolute bottom-3 left-3">
+						<button
+							class="flex items-center justify-center bg-palette-3 px-3 py-2 font-righteous text-lg text-black"
+						>
+							Bekijk meer
+						</button>
+					</div>
+				</div>
+				<div class="relative w-[60vw] shrink-0">
+					<h2 class="absolute top-4 left-3 text-3xl text-white">Dozen</h2>
+					<div class="h-full bg-[#00ACC2]">
+						<img
+							src="./images/category-img-1.png"
+							alt="category img"
+							class="h-full w-full object-cover"
+						/>
+					</div>
+					<div class="absolute bottom-3 left-3">
+						<button
+							class="flex items-center justify-center bg-palette-3 px-3 py-2 font-righteous text-lg text-black"
+						>
+							Bekijk meer
+						</button>
+					</div>
 				</div>
 			</div>
 		</section>
